# mini-rag-app

./: .gitignore  ARCHITECTURE.md  PRESENTATION.md  README.md
backend/: pyproject.toml
backend/app/: chat.py  main.py  mcp_client.py  rag.py
backend/data/: cape_town_data.txt
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: ChatSidebar.css  ChatSidebar.jsx  ChatWindow.css  ChatWindow.jsx
mcp_server/: requirements.txt  server.py
